仓库加固 + 三周工作入库（2026-09-08 全量扫描后修复）
## 本次入库内容（此前全部未提交，唯一提交停在 8/25）
- 反序列化模块全套：course/反序列化速查.md、5 本错题本、lab-scaffold/ 十口靶场（l6~l14）
- 教学与规划：course/工作规矩.md（33 条）、三年路线图.md、新坑清单.md、视频课清单.md
- 实战战利品：greatphp-test/、shiro-battle/ 的生成器与弹头源码（.java）
- 六份速查表 v2/v3.2 对齐成果、writeups、练武场落盘（src/lab + 99-lab-seed.sql）

## .gitignore 加固（排除可重放载荷与会话凭据）
- 新增排除：cookie_sleep.txt（Shiro rememberMe 载荷）、dnslog.txt、pycookies.txt、
  shiro-battle/{cookie.txt,payload_url.txt,payload3_url.txt,*.ser}、analyze_pe2.py、oob4.txt
- 新增排除：第三方大体积工具（vulhub/php709/phpggc/ysoserial-net/ysoserial-all.jar、
  easyjava-src、vendor、*.class、*.exe）与扫描产物 _scan_zcode/
- 补齐遗漏：t_shell.php

## 背景
2026-09-08 全量扫描发现：仓库 3 周无提交且无远端；ctf-lab/lab-scaffold/ 跟踪文件数为 0。
本次提交后，自建靶场与课程资产首次进入版本控制。